# grand-theft-cyberpunk

./: .gitignore  DEPENDENCY_PINNING.md  HERMES_INTEGRATION.md  MINING_ECONOMY_INTEGRATION.md  README.md  THREAT_MODEL.md  mypy.ini  requirements.txt  run_tests.py  sbom.json  towncrier_template.rst
.github/: dependabot.yml
.github/scripts/: generate_ai_review.py  submission_review_gate.py
.github/workflows/: ci.yml  cibw.yml  dependabot.yml  release.yml  submission-review.yml
.venv-ngd/: pyvenv.cfg
.venv-ngd/Scripts/: activate  activate.bat  jsonpointer
changelog/: 0.feature.rst
installer/: ngd.wxs
release/: PORTABILITY.md  diagnostics.json  nvidia-gratitude-driver.zip.sha256
release/nvidia-gratitude-driver/: LICENSE  SECURITY.md  pyproject.toml  requirements.txt
release/nvidia-gratitude-driver/scripts/: build-release.ps1  start-ngd.ps1  verify-windows.ps1
release/nvidia-gratitude-driver/src/ngd/: config.py  diagnostics.py  logging_config.py  term_events.py
release/nvidia-gratitude-driver/tests/: conftest.py  test_github_submission_review.py  test_gpu.py  test_state.py
runtime/nvidia_gratitude_driver/: prompt_hash_cache.json  status.json  telemetry.jsonl
runtime/test_run/: status.json  telemetry.jsonl
scripts/: install-windows.ps1  parse-terminal-dump.ps1
src/ngd/: browser.py  driver.py  prompt_check.py  slo.py  state.py  tracing.py.bak
src/nvidia_gratitude_driver.egg-info/: SOURCES.txt  requires.txt
tests/: test_browser.py  test_governor.py  test_term_events.py
